       instance to return different numbers on distinct instances,
       while preserving the same return value through invocations of
       CHANGE-CLASS;
    ** DEFMETHOD signals errors when methods with longer incongruent
       lambda lists are added to generic functions;
    ** COMPUTE-CLASS-PRECEDENCE-LIST now has a method specialized on
       CLASS, as specified in AMOP;
  * fixed some bugs shown by Paul Dietz' test suite:
    ** DOLIST puts its body in TAGBODY
    ** SET-EXCLUSIVE-OR sends arguments to :TEST function in the
       correct order
    ** MULTIPLE-VALUE-SETQ evaluates side-effectful places before
       value producing form
    ** if more variables are given to PROGV than values, extra
       variables are bound and made to have no value
    ** NSUBSTITUTE on list arguments gets the right answer with
       :FROM-END
    ** ELT signals an error of type TYPE-ERROR when the index argument
       is not a valid sequence index;
    ** LOOP signals (at macroexpansion time) an error of type
       PROGRAM-ERROR when duplicate variable names are found;
    ** LOOP supports DOWNTO and ABOVE properly (thanks to Matthew Danish)
    ** FUNCALL of special-operators now cause an error of type
       UNDEFINED-FUNCTION;
    ** PSETQ now works as required in the presence of side-effecting
       symbol-macro places;
    ** NCONC accepts any object as its last argument
    ** :COUNT argument to sequence functions may be BIGNUM (thanks to
       Gerd Moellman)
  * fixed bug 166: compiler preserves "there is a way to go"
    invariant when deleting code.
  * fixed bug 172: macro lambda lists with required arguments after
    &REST arguments now cause an error to be signalled.  (thanks to
    Matthew Danish)
  * fixed Entomotomy PEEK-CHAR-WRONGLY-ECHOS-TO-ECHO-STREAM bug (thanks
    to Matthew Danish)
  * fixed bug 225: STRING-STREAM is now a class (reported by Gilbert
    Baumann)

planned incompatible changes in 0.7.x: